--- a/templates/base.html
+++ b/templates/base.html
@@ -9,27 +9,28 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <header></header>
-        <nav class="navigation">
-            <section class="container">
-                <a class="navigation-title" href="/">
-                    <h1 class="title">Conjobs</h1>
-                </a>
-                <ul class="navigation-list float-right">
-                    {{if .User}}
-                    <li class="navigation-item">Hola, {{.User.Email}}</li>
-                    <li class="navigation-item"><a href="/logout">Cerrar sesión</a></li>
-                    {{else}}
-                    <li class="navigation-item"><a href="/login">Iniciar sesión</a></li>
-                    <li class="navigation-item"><a href="/register">Registrarse</a></li>
-                    {{end}}
-                </ul>
-            </section>
+
+    <header class="navbar">
+        <a href="/" class="brand">Cronjobs</a>
+        
+        <!-- Botón hamburguesa -->
+        <button class="menu-toggle button button-clear" onclick="toggleMenu()">☰</button>
+
+        <nav id="main-menu">
+            {{if .User}}
+            <a href="/">Home</a>
+            <a href="/docs">Docs</a>
+            <a href="/dashboard" class="btn btn-accent">Dashboard</a>
+            <a href="/logout">Cerrar sesión</a>
+            {{else}}
+            <a href="/login">Iniciar sesión</a>
+            <a href="/register">Registrarse</a>
+            {{end}}
         </nav>
     </header>
 
     <main class="container" id="content">
-        {{ renderPartial .Tmpl }}
+        {{ renderPartial .Tmpl . }}
     </main>
 
     <footer class="footer">
@@ -37,7 +38,9 @@
             <p>&copy; Conjobs. Todos los derechos reservados.</p>
         </section>
     </footer>
-    <script src="/static/js/login.js"></script>
+
+    <!-- Scripts -->
+    <script src="/static/js/navbar.js"></script>
 </body>
 </html>
 {{end}}
