--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
 <body>
 
     <header class="navbar">
-        <a href="/" class="brand">Cronjobs</a>
+        <a href="/" class="brand">
+            <img src="/static/img/cronjobs-logo.png" alt="Cronjobs logo" width="170px">
+        </a>
         
         <!-- Botón hamburguesa -->
         <button class="menu-toggle button button-clear" onclick="toggleMenu()">☰</button>
