--- a/templates/docs.html
+++ b/templates/docs.html
@@ -1,10 +1,10 @@
-{{define "dashboard"}}
+{{define "docs"}}
 <div class="main-container">
     <div class="sidebar">
         {{ template "dashboard_menu" . }}
     </div>
     <div class="content">
-        <h2>Dashboard</h2>
+        <h2>Docs</h2>
         
     </div>
 </div>
