Trabajando en crud de Tareas - Finalizado Agregar y mostrar

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 {{define "dashboard"}}
 <div class="main-container">
     <div class="sidebar">
-        {{ template "dashboard_menu" . }}
+        {{ template "side_menu" . }}
     </div>
     <div class="content">
         <h2>Dashboard</h2>
