--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,7 +1,7 @@
 {{define "logs"}}
 <div class="main-container">
     <div class="sidebar">
-        {{ template "dashboard_menu" . }}
+        {{ template "side_menu" . }}
     </div>
     <div class="content">
         <h2>Logs</h2>
