--- a/templates/docs.html
+++ b/templates/docs.html
@@ -1,7 +1,7 @@
 {{define "docs"}}
 <div class="main-container">
     <div class="sidebar">
-        {{ template "dashboard_menu" . }}
+        {{ template "side_menu" . }}
     </div>
     <div class="content">
         <h2>Docs</h2>
