--- a/templates/side-menu.html
+++ b/templates/side-menu.html
@@ -1,4 +1,4 @@
-{{ define "dashboard_menu" }}
+{{ define "side_menu" }}
 <!-- Mobile -->
 <div class="offcanvas offcanvas-start bg-light dashboard-menu-desktop border-end bg-light" tabindex="-1" id="offcanvas" data-bs-keyboard="false" data-bs-backdrop="false">
     <div class="offcanvas-body px-0">
@@ -15,7 +15,7 @@
             </li>
             <li class="nav-item w-100">
                 <a href="/tasks" class='nav-link {{ if eq .Path "/tasks" }}active disabled{{end}}'>
-                    <i class="fs-5 bi-table"></i><span class="ms-3 d-inline">Tareas</span>
+                    <i class="fs-5 bi-table"></i><span class="ms-3 d-inline">Tasks</span>
                 </a>
             </li>
             <li class="nav-item w-100">
