--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,10 +4,10 @@
         {{ template "side_menu" . }}
     </div>
     <div class="content">
-        <h3>Tareas</h3>
+        <h3>Tasks</h3>
 
-        <button type="button" class="btn btn-success my-3" data-bs-toggle="modal" data-bs-target="#taskModal">
-            Nueva
+        <button type="button" class="btn btn-sm btn-outline-success my-3" data-bs-toggle="modal" data-bs-target="#taskModal">
+            <i class="bi bi-plus-circle"></i><span class="ms-2">New</span>
         </button>
 
         <!-- Tasks Table -->
